--- a/mybatis/mybatis-02-crud/pom.xml
+++ b/mybatis/mybatis-02-crud/pom.xml
@@ -5,40 +5,42 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.powernode</groupId>
-    <artifactId>mybatis-01-introduction</artifactId>
+    <artifactId>mybatis-02-crud</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <!--打包方式jar-->
     <packaging>jar</packaging>
+
     <dependencies>
-        <!--mybatis依赖-->
+<!--        mybatis依赖-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.5.13</version>
         </dependency>
-        <!-- mysql驱动依赖-->
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.33</version>
-        </dependency>
-
-<!--        junit单元测试-->
+<!--        junit依赖-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-<!--日志依赖-->
-
+<!--        logback依赖-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.4.8</version>
         </dependency>
-
+<!--        mysql依赖-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
