--- a/springboot2/lesson09-jdbcTemplate/src/main/resources/application.properties
+++ b/springboot2/lesson09-jdbcTemplate/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#1.?????
-#2.?????
-#3.?????
-#4.??jdbcTemplate?????
+#1.导入jdbc,jpa依赖
+#2.连接数据库
+#3.创建实体类.
+#4.使用jdbcTemplate实现crud
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/powernode
 spring.datasource.username=root
